# InlamningAlgos-DesignPatterns

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
include/: AppState.h  Event.h  EventConsumer.h  EventLog.h  EventLoop.h  EventProducer.h  EventQueue.h  EventSort.h  TestHelpers.h  UserInterface.h
src/: AppState.c  Event.c  EventConsumer.c  EventLog.c  EventProducer.c  EventQueue.c  EventSort.c  TestHelpers.c  UserInterface.c
